react static site

--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>David's Homepage</title>
-</head>
-<body>
-  
-</body>
-</html>
+<html lang="en" data-reactid=".eo0wcs0zk" data-react-checksum="210018830"><head data-reactid=".eo0wcs0zk.0"><meta charset="UTF-8" data-reactid=".eo0wcs0zk.0.0"><title data-reactid=".eo0wcs0zk.0.1">David&#x27;s Homepage</title></head><body data-reactid=".eo0wcs0zk.1"><div style="width:100%;height:100px;background:#80B9FD;" data-reactid=".eo0wcs0zk.1.0"><h1 data-reactid=".eo0wcs0zk.1.0.$=10:0"><span data-reactid=".eo0wcs0zk.1.0.$=10:0.$=10:0">Hello World</span></h1><span data-reactid=".eo0wcs0zk.1.0.$=11:0">;</span></div></body></html>
